cmake_minimum_required(VERSION 3.15)
project(cplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(cplus main.cpp algorithmic/locate.cpp algorithmic/locate.h example/ex1_1.cpp example/ex1_1.h excerpt/2/example.cpp excerpt/2/example.h excerpt/3/example.cpp excerpt/3/example.h excerpt/3/reference.cpp excerpt/3/reference.h)